Cambio de proyectos java tipo maven a tipo ant
El cambio se realiza para poder utilizar el clean and build y compartir paquetes entre modulos

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /Progra2-Servidor/target/
 /Progra2-Salon/target/
+/progra2_salon/nbproject/private/
+/progra2_servidor/nbproject/private/
+/progra2_cocina/nbproject/private/
+/progra2_simulador/nbproject/private/
