Comunicación de sockets - prueba exitosa

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /progra2_servidor/nbproject/private/
 /progra2_cocina/nbproject/private/
 /progra2_simulador/nbproject/private/
+/progra2_servidor/dist/
+/progra2_servidor/build/
+/progra2_salon/build/
