Primer prototipo final

--- a/progra2_simulador/nbproject/project.properties
+++ b/progra2_simulador/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/progra2_simulador
 excludes=
+file.reference.progra2_servidor.jar=..\\progra2_servidor\\dist\\progra2_servidor.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.progra2_servidor.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
